apps/argocd/manifests/ingress-applicationset-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-applicationset-webhook
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
    internal-networking/expose: "true"
spec:
  ingressClassName: tenant-prod
  rules:
    - host: argocd-applicationset-webhook-public.enigma.vgijssel.nl
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argocd-applicationset-controller
                port:
                  number: 7000
  tls:
    - hosts:
        - argocd-applicationset-webhook-public.enigma.vgijssel.nl
      secretName: argocd-applicationset-webhook-tls
