apps/argocd/manifests/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-grpc
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
spec:
  ingressClassName: tenant-prod
  rules:
    - host: argocd-grpc.enigma.vgijssel.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd-grpc.enigma.vgijssel.nl
      secretName: argocd-grpc-tls
