apps/argocd/manifests/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-http
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: tenant-prod
  rules:
    - host: argocd.enigma.vgijssel.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.enigma.vgijssel.nl
      secretName: argocd-http-tls
