apps/argocd/manifests/ingress-server-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-webhook
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stage
    internal-networking/expose: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: "argocd.enigma.vgijssel.nl"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host argocd.enigma.vgijssel.nl;
spec:
  ingressClassName: tenant-prod
  rules:
    - host: argocd-webhook-public.enigma.vgijssel.nl
      http:
        paths:
          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  name: https
  tls:
    - hosts:
        - argocd-webhook-public.enigma.vgijssel.nl
      secretName: argocd-server-webhook-tls
